--- a/app/src/main/res/layout/content_appbar_detail.xml
+++ b/app/src/main/res/layout/content_appbar_detail.xml
@@ -7,41 +7,67 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="0dp">
-        <RelativeLayout
+
+
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_image"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:elevation="0dp">
+            android:layout_height="match_parent"
+            app:contentScrim="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/image_backdrop"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
-                android:transitionName="@string/poster" />
+                android:layout_height="@dimen/height_image"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:elevation="0dp"
+                app:layout_collapseMode="parallax"
+                >
 
-            <TextView
-                android:id="@+id/textView_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/bg_overlay"
-                android:paddingLeft="@dimen/margin_small"
-                android:paddingRight="@dimen/margin_small"
-                android:layout_alignParentBottom="true"
-                android:textAppearance="@style/TextStyle.Headline"
-                android:textStyle="bold"
-                android:text="@string/title"/>
+                <ImageView
+                    android:id="@+id/image_backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:scaleType="centerCrop"
+                    android:adjustViewBounds="true"
+                    android:transitionName="@string/poster" />
 
+                <TextView
+                    android:id="@+id/textView_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/bg_overlay"
+                    android:paddingLeft="@dimen/margin_small"
+                    android:paddingRight="@dimen/margin_small"
+                    android:layout_alignParentBottom="true"
+                    android:textAppearance="@style/TextStyle.Headline"
+                    android:textStyle="bold"
+                    android:text="@string/title"
+                    />
+            </RelativeLayout>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-                />
+                app:layout_collapseMode="pin"
+                >
+                <TextView
+                    android:id="@+id/textView_titleBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/margin_small"
+                    android:paddingRight="@dimen/margin_small"
+                    android:layout_alignParentBottom="true"
+                    android:textAppearance="@style/TextStyle.Headline"
+                    android:textStyle="bold"
+                    android:text="@string/title"/>
+                </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.CollapsingToolbarLayout>
 
-        </RelativeLayout>
+
+
+
 
         </android.support.design.widget.AppBarLayout>
 
