--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -3,66 +3,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout android:layout_width="match_parent"
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         tools:showIn="@layout/activity_detail"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="@dimen/margin_normal"
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             >
 
-            <android.support.v4.widget.Space
-                android:layout_width="@dimen/margin_normal"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:id="@+id/image_poster"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="center"
-                android:adjustViewBounds="true" />
-
-            <android.support.v4.widget.Space
-                android:layout_width="@dimen/margin_normal"
-                android:layout_height="wrap_content" />
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:layout_margin="@dimen/margin_normal"
+                >
 
-                <TextView
-                    android:id="@+id/textView_year"
+                <android.support.v4.widget.Space
+                    android:layout_width="@dimen/margin_normal"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/image_poster"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextStyle.Large"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorGrey_500"
-                    android:text="@string/year"/>
+                    android:layout_gravity="center_horizontal"
+                    android:scaleType="center"
+                    android:adjustViewBounds="true" />
 
+                <android.support.v4.widget.Space
+                    android:layout_width="@dimen/margin_normal"
+                    android:layout_height="wrap_content" />
 
-                <TextView
-                    android:id="@+id/textView_rate"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextStyle.Medium"
-                    android:textColor="@color/colorBlack_1000"
-                    android:text="@string/rate"/>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView_year"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextStyle.Large"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorGrey_500"
+                        android:text="@string/year"/>
+
+
+                    <TextView
+                        android:id="@+id/textView_rate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextStyle.Medium"
+                        android:textColor="@color/colorBlack_1000"
+                        android:text="@string/rate"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/textView_overview"
                 android:layout_width="wrap_content"
@@ -71,9 +73,10 @@
                 android:layout_marginRight="@dimen/margin_small"
                 android:textAppearance="@style/TextStyle.Medium"
                 android:text="@string/overview"/>
-        </ScrollView>
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </layout>
 
