--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -38,8 +38,9 @@
                     android:layout_height="wrap_content" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -48,7 +49,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/TextStyle.Large"
                         android:textStyle="bold"
-                        android:textColor="@color/colorGrey_500"
+                        android:textColor="@color/colorBlack_1000"
                         android:text="@string/year"/>
 
 
@@ -60,8 +61,28 @@
                         android:textColor="@color/colorBlack_1000"
                         android:text="@string/rate"/>
 
+                    <android.support.v4.widget.Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/margin_small" />
+
+                    <TextView
+                        android:id="@+id/textView_genre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/margin_normal"
+                        android:textAppearance="@style/TextStyle.Small"
+                        android:textColor="@color/colorBlue_900"/>
                 </LinearLayout>
 
+                <ImageView
+                    android:id="@+id/imageView_favorite"
+                    android:layout_width="@dimen/size_image_36dp"
+                    android:layout_height="@dimen/size_image_36dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_unfavorite"
+                    android:scaleType="center"
+                    android:adjustViewBounds="true"
+                    />
             </LinearLayout>
 
 
@@ -73,6 +94,84 @@
                 android:layout_marginRight="@dimen/margin_small"
                 android:textAppearance="@style/TextStyle.Medium"
                 android:text="@string/overview"/>
+
+            <android.support.v4.widget.Space
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:layout_marginRight="@dimen/margin_small"
+                android:textAppearance="@style/TextStyle.Large"
+                android:textColor="@color/colorBlack_1000"
+                android:text="@string/trailer"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/margin_normal"
+                android:layout_marginRight="@dimen/margin_normal"
+                android:background="@color/colorGrey_500"
+                />
+
+            <android.support.v4.widget.Space
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_xsmall" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_trailer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorBlueGrey_50"/>
+
+            <android.support.v4.widget.Space
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:layout_marginRight="@dimen/margin_small"
+                android:textAppearance="@style/TextStyle.Large"
+                android:textColor="@color/colorBlack_1000"
+                android:text="@string/review"/>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="@dimen/margin_normal"
+                android:layout_marginRight="@dimen/margin_normal"
+                android:background="@color/colorGrey_500"
+                />
+
+            <android.support.v4.widget.Space
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_small" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="@dimen/margin_small"
+                    android:layout_marginRight="@dimen/margin_small"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:textAppearance="@style/TextStyle.Large"
+                    android:text="@string/no_review"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView_Review"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"/>
+            </RelativeLayout>
 
         </LinearLayout>
 
