--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
-        android:layout_margin="@dimen/margin_xxsmall">
+        android:layout_margin="@dimen/margin_xxsmall"
+        android:foreground="@drawable/riple_effect"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
