--- a/app/src/main/res/layout/list_detail_item_review.xml
+++ b/app/src/main/res/layout/list_detail_item_review.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/main_layout"
-        android:layout_marginBottom="@dimen/margin_xsmall"
-        android:layout_marginLeft="@dimen/margin_small"
-        android:layout_marginRight="@dimen/margin_small"
-        android:orientation="vertical">
 
-        <android.support.v4.widget.Space
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/margin_xxsmall" />
 
         <LinearLayout
             android:foreground="@drawable/riple_effect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="@dimen/margin_small"
             android:padding="@dimen/margin_xsmall"
             android:background="@drawable/layout_diagonal_round"
             android:descendantFocusability="beforeDescendants">
@@ -58,5 +48,4 @@
 
         </LinearLayout>
 
-    </LinearLayout>
 </layout>
