-  Add horizontal recyclerview on main activity

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,6 +13,14 @@
         <menu>
 
             <item
+                android:id="@+id/sort_now_playing"
+                android:title="@string/now_playing" />
+
+            <item
+                android:id="@+id/sort_upcoming"
+                android:title="Upcoming" />
+
+            <item
                 android:id="@+id/sort_most_popular"
                 android:title="@string/most_popular" />
 
