--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -191,6 +191,9 @@
                     android:background="@color/colorWhite"/>
             </RelativeLayout>
 
+            <android.support.v4.widget.Space
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_normal" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
