--- a/app/src/main/res/layout/list_item_movie_small.xml
+++ b/app/src/main/res/layout/list_item_movie_small.xml
@@ -4,7 +4,9 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:minWidth="250dp"
+        android:minHeight="320dp"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
         android:layout_margin="@dimen/margin_xxsmall"
@@ -13,23 +15,23 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:minWidth="250dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
                 android:backgroundTint="#5fff"
-                android:backgroundTintMode="src_over"
-                android:padding="@dimen/margin_xxsmall">
+                android:backgroundTintMode="src_over">
 
                 <ImageView
                     android:id="@+id/image_poster"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="@dimen/margin_small"
                     android:layout_gravity="center_horizontal"
-                    android:scaleType="center"
+                    android:scaleType="centerCrop"
                     android:adjustViewBounds="true"
                     android:transitionName="@string/poster" />
             </FrameLayout>
