--- a/app/src/main/res/layout/view_title.xml
+++ b/app/src/main/res/layout/view_title.xml
@@ -4,6 +4,9 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <android.support.v4.widget.Space
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/margin_normal" />
         <TextView
             android:id="@+id/textview_title"
             android:layout_width="wrap_content"
