--- a/app/src/main/res/drawable/layout_no_round.xml
+++ b/app/src/main/res/drawable/layout_no_round.xml
@@ -11,12 +11,10 @@
 
 
     <item
-        android:bottom="2dp"
-        android:left="2dp"
-        android:right="1dp"
+        android:bottom="1dp"
         android:top="1dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/colorWhite" />
+            <solid android:color="@color/colorGrey_200" />
             <corners android:topLeftRadius="0dp" android:topRightRadius="0dp"
                 android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp"/>
 
