--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,5 +14,14 @@
             android:id="@+id/content_detail"
             layout="@layout/content_detail" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:tint="@color/colorWhite"
+            app:backgroundTint="@color/colorBlueGrey_50"
+            android:src="@drawable/ic_favorite" />
     </android.support.design.widget.CoordinatorLayout>
 </layout>
