--- a/app/src/main/res/layout/list_recyclerview_horizontal.xml
+++ b/app/src/main/res/layout/list_recyclerview_horizontal.xml
@@ -6,13 +6,14 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical"
+            android:background="@drawable/layout_no_round"
+            android:layout_marginTop="@dimen/margin_small"
             >
             <include layout="@layout/view_title" android:id="@+id/view_title"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorBlueGrey_50"
                 />
         </LinearLayout>
 
