--- a/app/src/main/res/layout/item_movie_small.xml
+++ b/app/src/main/res/layout/item_movie_small.xml
@@ -64,7 +64,7 @@
                             android:layout_height="wrap_content"
                             android:visibility="visible" />
 
-                        <TextView
+                        <com.app.infideap.stylishwidget.view.ATextView
                             android:id="@+id/textView_point"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
                         android:layout_height="@dimen/margin_xsmall"
                         android:visibility="visible" />
 
-                    <TextView
+                    <com.app.infideap.stylishwidget.view.ATextView
                         android:id="@+id/textview_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                         android:layout_height="@dimen/margin_xsmall"
                         android:visibility="visible" />
 
-                    <TextView
+                    <com.app.infideap.stylishwidget.view.ATextView
                         android:id="@+id/textview_releaseDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -105,7 +105,7 @@
                         android:layout_height="@dimen/margin_small"
                         android:visibility="visible" />
 
-                    <TextView
+                    <com.app.infideap.stylishwidget.view.ATextView
                         android:id="@+id/textview_genre"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
