--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -7,7 +7,7 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <com.app.infideap.stylishwidget.view.ATextView
             android:id="@+id/category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
