--- a/app/src/main/res/layout/item_detail_review.xml
+++ b/app/src/main/res/layout/item_detail_review.xml
@@ -22,7 +22,7 @@
                 android:layout_weight="0.5"
                 >
 
-                <TextView
+                <com.app.infideap.stylishwidget.view.ATextView
                     android:id="@+id/textView_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/margin_xsmall" />
 
-                <TextView
+                <com.app.infideap.stylishwidget.view.ATextView
                     android:id="@+id/textView_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
