--- a/app/src/main/res/layout/item_detail_trailer.xml
+++ b/app/src/main/res/layout/item_detail_trailer.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/margin_normal" />
 
-            <TextView
+            <com.app.infideap.stylishwidget.view.ATextView
                 android:id="@+id/textView_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
