--- a/app/src/main/res/layout/view_title.xml
+++ b/app/src/main/res/layout/view_title.xml
@@ -7,7 +7,7 @@
         <android.support.v4.widget.Space
             android:layout_width="wrap_content"
             android:layout_height="@dimen/margin_normal" />
-        <TextView
+        <com.app.infideap.stylishwidget.view.ATextView
             android:id="@+id/textview_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
